--- a/themes/default/common/footer.html
+++ b/themes/default/common/footer.html
@@ -6,6 +6,9 @@
 
 	<script src="{{ app.url }}/themes/{{ app.theme }}/assets/js/moment.min.js"></script>
 
+	<!-- APEX CHART -->
+	<script src="//cdn.jsdelivr.net/npm/apexcharts"></script>
+
 	<!-- DATA TABLES -->
 	<script src="{{ app.url }}/themes/{{ app.theme }}/assets/js/dataTables.min.js"></script>
 	<script src="{{ app.url }}/themes/{{ app.theme }}/assets/js/dataTables.bootstrap4.min.js"></script>
