--- a/themes/default/login/index.html
+++ b/themes/default/login/index.html
@@ -11,7 +11,7 @@
                 <h1 class="login-title"> School Management System <h1>
                 <hr>
                 <h2 class="login-sub-title"> David De Silva College &nbsp; Minuwangoda </h2>
-                <a href="http://davidsilvacollege.int" class="website"><h6>(Back to Official Website)</h6></a>
+                <a href="http://davidsilvacollege" class="website"><h6>(Back to Official Website)</h6></a>
             </div>
 
             <div class="col-md-4 offset-1 my-auto loginform">
