--- a/themes/default/common/footer.html
+++ b/themes/default/common/footer.html
@@ -7,7 +7,7 @@
 	<script src="{{ app.url }}/themes/{{ app.theme }}/assets/js/moment.min.js"></script>
 
 	<!-- APEX CHART -->
-	<script src="//cdn.jsdelivr.net/npm/apexcharts"></script>
+	<script src="{{ app.url }}/themes/{{ app.theme }}/assets/js/apexcharts.min.js"></script>
 
 	<!-- DATA TABLES -->
 	<script src="{{ app.url }}/themes/{{ app.theme }}/assets/js/dataTables.min.js"></script>
