--- a/themes/default/home/index.html
+++ b/themes/default/home/index.html
@@ -147,21 +147,21 @@
                                     <div class="col-4">
                                         <h6 class="card-title">Total</h6>
                                         <p class="card-text">
-                                            150
+                                            {{ parent.total.all }}
                                         </p>
                                     </div>
 
                                     <div class="col-4">
                                         <h6 class="card-title">Male</h6>
                                         <p class="card-text">
-                                            100
+                                            {{ parent.total.male }}
                                         </p>
                                     </div>
 
                                     <div class="col-4">
                                         <h6 class="card-title">Female</h6>
                                         <p class="card-text">
-                                            50
+                                            {{ parent.total.female }}
                                         </p>
 
                                         <div class="row">
@@ -187,21 +187,21 @@
                                     <div class="col-4">
                                         <h6 class="card-title">Total</h6>
                                         <p class="card-text">
-                                            150
+                                            {{ user.total.all }}
                                         </p>
                                     </div>
 
                                     <div class="col-4">
                                         <h6 class="card-title">Active</h6>
                                         <p class="card-text">
-                                            100
+                                            {{ user.total.active }}
                                         </p>
                                     </div>
 
                                     <div class="col-4">
                                         <h6 class="card-title">Disabled</h6>
                                         <p class="card-text">
-                                            50
+                                            {{ user.total.disabled }}
                                         </p>
 
                                         <div class="row">
@@ -227,21 +227,21 @@
                                     <div class="col-4">
                                         <h6 class="card-title">Total</h6>
                                         <p class="card-text">
-                                            150
+                                            {{ sport.total.all }}
                                         </p>
                                     </div>
 
                                     <div class="col-4">
                                         <h6 class="card-title">Coaches</h6>
                                         <p class="card-text">
-                                            100
+                                            {{ coach.total.all }}
                                         </p>
                                     </div>
 
                                     <div class="col-4">
                                         <h6 class="card-title">Students</h6>
                                         <p class="card-text">
-                                            50
+                                            {{ sport.student.total.all }}
                                         </p>
 
                                         <div class="row">
